--- a/index.html
+++ b/index.html
@@ -1,1 +1,54 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Disney home</title>
+    <!-- Add your external CSS stylesheet link here -->
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header class="header">
+        <h1>Disney</h1>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Search</a></li>
+                <li><a href="#">My list</a></li>
+                <li><a href="#">Orginals</a></li>
+                <li><a href="#">Movies</a></li>
+                <li><a href="#">Series</a></li>
+            </ul>
+        </nav>
+        <article>
+            <button class="profile-button"> </button>
+            <article class="hidden">
+                <ul class="users">
+                    <li><a href="#">Tom Deeterink</a></li>
+                    <li><a href="#">Tom Deeterink</a></li>
+                    <li><a href="#">Tom Deeterink</a></li>
+                    <li><a href="#">Tom Deeterink</a></li>
+                    <li><a href="#">Tom Deeterink</a></li>
+                    <li><a href="#">Tom Deeterink</a></li>
+                </ul>
+            </article>
+           
+        </article>
+        
+    </header>
 
+    <main>
+        <section>
+            <h2>Welcome to Our Website</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2023 Your Website. All rights reserved.</p>
+    </footer>
+
+    <!-- Add your external JavaScript file link here -->
+    <script src="script.js"></script>
+</body>
+</html>
