--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <button class="profile-button"> </button>
             <article class="hidden">
                 <ul class="users">
-                    <li><a href="#">Tom Deeterink</a></li>
+                    <li><img src=""><a href="#">Tom Deeterink</a></li>
                     <li><a href="#">Tom Deeterink</a></li>
                     <li><a href="#">Tom Deeterink</a></li>
                     <li><a href="#">Tom Deeterink</a></li>
