Push voor desktop menu
Push voor het desktop menu

--- a/index.html
+++ b/index.html
@@ -21,15 +21,18 @@
             </ul>
         </nav>
         <article>
-            <button class="profile-button"> </button>
+            <div class="container">
+                <button class="profile-button"><img src="assets/_DSC3532.jpeg"> </button>
+            </div>
             <article class="hidden">
-                <ul class="users">
-                    <li><img src=""><a href="#">Tom Deeterink</a></li>
-                    <li><a href="#">Tom Deeterink</a></li>
-                    <li><a href="#">Tom Deeterink</a></li>
-                    <li><a href="#">Tom Deeterink</a></li>
-                    <li><a href="#">Tom Deeterink</a></li>
-                    <li><a href="#">Tom Deeterink</a></li>
+                <div class=" devider "></div>
+                <ul class=" users ">
+                    <li><img src="assets/_DSC3532.jpeg"><a href="#">Tom Deeterink</a></li>
+                    <li><img src="assets/_DSC3532.jpeg"><a href="#">Tom Deeterink</a></li>
+                    <li><img src="assets/_DSC3532.jpeg"><a href="#">Tom Deeterink</a></li>
+                    <li><img src="assets/_DSC3532.jpeg"><a href="#">Tom Deeterink</a></li>
+                    <li><img src="assets/_DSC3532.jpeg"><a href="#">Tom Deeterink</a></li>
+                    <li><img src="assets/_DSC3532.jpeg"><a href="#">Tom Deeterink</a></li>
                 </ul>
             </article>
            
