--- a/index.html
+++ b/index.html
@@ -12,12 +12,20 @@
         <h1>Disney</h1>
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="⎹#">Home</a></li>
                 <li><a href="#">Search</a></li>
                 <li><a href="#">My list</a></li>
                 <li><a href="#">Orginals</a></li>
                 <li><a href="#">Movies</a></li>
                 <li><a href="#">Series</a></li>
+            </ul>
+        </nav>
+        <nav class="mobile">
+            <ul>
+                <li><a href="#">🏠</a></li>
+                <li><a href="#">🔍</a></li>
+                <li><a href="#">✚</a></li>
+                <li><a href="#">⎹</a></li>
             </ul>
         </nav>
         <article>
