--- a/index.html
+++ b/index.html
@@ -49,9 +49,17 @@
     </header>
 
     <main>
-        <section>
-            <h2>Welcome to Our Website</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <section class="sc1home">
+            <button class="chevronback">◀</button>
+            <button class="chevronnext">▶︎</button>
+                <div class="container">
+                    <article> </article>
+                    <article> </article>
+                    <article> </article>
+                    <article> </article>
+                    <article> </article>
+                </div>
+            
         </section>
     </main>
 
