--- a/index.html
+++ b/index.html
@@ -50,14 +50,38 @@
 
     <main>
         <section class="sc1home">
-            <button class="chevronback">◀</button>
-            <button class="chevronnext">▶︎</button>
                 <div class="container">
-                    <article> </article>
-                    <article> </article>
-                    <article> </article>
-                    <article> </article>
-                    <article> </article>
+                    <button class="chevron back"><span>◀</span></button>
+                    <div class="big-header">
+                        <article class="header-series"> 
+
+                        </article>
+                        <article class="header-series"> 
+                            <div class="content">
+                                <img src="assets/download.jpg">
+                                <h1> Watch now</h1>
+                            </div>
+                        </article>
+                        <article class="header-series">
+                            <div class="content">
+                                <img src="assets/wp3303411.jpg">
+                                <h1> Watch now</h1>
+                            </div>
+                             </article>
+                        <article class="header-series"> 
+                            <div class="content">
+                                <img src="assets/wp3291731.jpg">
+                                <h1> Watch now</h1>
+                            </div>
+                        </article>
+                        <article class="header-series">
+                            <div class="content">
+                                <img src="assets/iptrxid.jpg">
+                                <h1> Watch now</h1>
+                            </div>
+                             </article>
+                    </div>
+                    <button class="chevron next">▶︎</button>
                 </div>
             
         </section>
